[workspace]
members = ["src/q3x_backend"]
resolver = "2"

[workspace.dependencies]
candid = "0.10.7"
ic-cdk = "0.17.2"
serde = "1.0.219"
serde_derive = "1.0.219"
sha2 = "0.10.9"
hex = "0.4.3"
libsecp256k1 = { version = "0.6.0", package = "libsecp256k1", default-features = false, features = [
	"lazy-static-context",
] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ic-ledger-types = "0.14.0"
